--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -4,6 +4,7 @@
 <body>
 
     <div class="footer ">
+    <div class="footerBlur" style=" width: 100vw;  background-color: rgba(255, 255, 255, 0.784);">
     <div class="footer2 ">
         <span class="footerTxt" >
             <h3>Our Story</h3>
@@ -22,6 +23,7 @@
             <h3>About Us !</h3>
             Welcome to Rare Kicks – Where Style Meets Uniqueness! At Rare Kicks, we're more than just a shoe brand; we're a lifestyle. Founded with a passion for sneakers and a commitment to individuality, we bring you a curated collection of the most exclusive and unique kicks in the sneaker world.
         </span>
+    </div>
     </div>
     </div>
 
