--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,24 +1,26 @@
 .footer{
     display: flex;
     flex-direction: row;
-    position: fixed;
+    position: relative;
+    justify-content: space-evenly;
     bottom: 0;
     left: 0;
+    right: 0;
     background-image: url('../../public/images/13.jpg');
     background-size: cover;
     background-repeat: no-repeat; 
-    background-attachment: fixed;
+    background-attachment: scroll;
+    border-top: 2px solid black;
 }
 .footer2{
     display: flex;
     flex-direction: row;
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
-    justify-content: space-around;
+    justify-content: space-evenly;
     right: 0;
-    background-color: rgba(255, 255, 255, 0.784);
-    border-top: 2px solid black;
+    
 }
 
 .footerTxt{
