--- a/public/css/userRegister.css
+++ b/public/css/userRegister.css
@@ -47,6 +47,28 @@ body{
     width: 100px;
 }
 
+.mainCont{
+    background-color: rgba(255, 255, 255, 0.676);
+    display: flex;
+    flex-direction: row;
+    width: 550px;
+    height: 550px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    padding: 20px;
+    border-radius: 20px;
+}
+.mainCont button{
+    width: 200px;
+}
+.save{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -58,4 +80,10 @@ input::-webkit-inner-spin-button {
     position: fixed;
     bottom: 20px;
     right: 10px;
+}
+
+.backButton{
+    position: absolute;
+    top: 10px;
+    right: 20px;
 }
