--- a/views/admin/adminEditUser.ejs
+++ b/views/admin/adminEditUser.ejs
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-<%- include('../layout/header')-%>
+<%- include('../layout/adminHeader')-%>
 <div class="container-fluid" style="display: flex; align-items: center; justify-content: center;">
 <div class="mainCont">
     <form class="row g-3 needs-validation" action="/admin/editUser?id=<%=user._id%>" method="post" novalidate enctype="application/form-data">
