--- a/views/admin/adminUserManagement.ejs
+++ b/views/admin/adminUserManagement.ejs
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-    <%- include('../layout/header')-%>
+    <%- include('../layout/adminHeader')-%>
 
 <div class="container" style="margin-top: 150px; margin-bottom: 200px;"> 
     <h2 class="" style=" font-family: 'Michroma', sans-serif;">Hi Admin!</h2>
@@ -28,6 +28,24 @@
 
         <div class="container mt-5 border rounded p-4">
             <h2>Users</h2>
+
+              <div class="d-flex justify-content-center text-center mt-2"> 
+                <form action="/admin/searchUser" method="get" class=" w-50 mt-2 mb-3" enctype="application/form-data">
+                  <div class="input-group mt-3">
+                      <span class="input-group-text">
+                        <i class="bi bi-search" style="font-size: 20px;"></i>
+                      </span>
+                      <% if (search) { %>
+                      <input type="text" class="form-control w-50" name="search" value="<%= search%>" placeholder="Search User's">
+                    <% } else { %>
+                      <input type="text" class="form-control w-50" name="search" placeholder="Search User's">
+                    <% } %>
+                    </div>
+                    <button class="btn btn-dark text-center rounded-pill" type="submit" style="width: 100px; margin-top: 10px;">Search</button>
+                    <a href="/admin/viewUsers" class="btn btn-danger  rounded-pill text-center" style="width: 100px; margin-top: 10px;">Reset</i></a>
+                </form>
+              </div>
+              
             <div class="row row-cols-1 row-cols-xl-3 row-cols-md-2 g-4  d-flex" style="justify-content: center;">
               <% if (users=='') { %>
                 <h2 class="text-center">No Users!</h2>
