--- a/views/admin/adminUserManagement.ejs
+++ b/views/admin/adminUserManagement.ejs
@@ -5,18 +5,10 @@
 <body>
     <%- include('../layout/adminHeader')-%>
 
-<div class="container" style="margin-top: 150px; margin-bottom: 200px;"> 
+<div class="container" style="margin-top: 20px; margin-bottom: 200px;"> 
     <h2 class="" style=" font-family: 'Michroma', sans-serif;">Hi Admin!</h2>
         <div class="container-fluid adminContainer">
             <div class="row g-5"> 
-                <div class="adminProfile col-12 col-xxl-2 col-xl-2 col-md-12 col-lg-2 col-sm-12">
-                    <i class="bi bi-person-circle" style="font-size: 60px;"></i>
-                    <a href="/admin/home" style="width: 100%; display: flex; align-items: center; justify-content: center; text-decoration: none;"><button class="btn btn-dark rounded-pill me-2 mt-2">Products</button></a>
-
-                    <a href="/admin/viewUsers" style="width: 100%; display: flex; align-items: center; justify-content: center; text-decoration: none;"><button class="btn btn-success rounded-pill me-2 mt-2">View Users</button></a>
-
-                    <a href="" style="width: 100%; display: flex; align-items: center; justify-content: center; text-decoration: none;"><button class="btn btn-dark rounded-pill me-2 mt-2">Sales</button></a>
-                </div>
                 <div class="adminCenter col-12 col-xxl-2 col-xl-2 col-md-12 col-lg-2 col-sm-12">
                   <button class="btn btn-dark rounded">Total Users  : <%=users.length%></button>
                   <a href="/admin/createUser" style="width: 100%; display: flex; align-items: center; justify-content: center; text-decoration: none;"><button class="btn btn-dark rounded  mt-2">Create User</button></a>
@@ -88,5 +80,5 @@
 <script src="../../public/jsFiles/searchVal.js"></script>
 
 
-    <!-- <%- include('../layout/footer')-%> -->
+    <%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
