--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -4,7 +4,7 @@
     position: relative;
     justify-content: center;
     align-items: center;
-
+    z-index: 0;
     background: linear-gradient(225deg, hsla(186, 33%, 94%, 1) 0%, hsla(216, 41%, 79%, 1) 100%);
 
     background: -moz-linear-gradient(225deg, hsla(186, 33%, 94%, 1) 0%, hsla(216, 41%, 79%, 1) 100%);
@@ -14,6 +14,23 @@
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#EBF4F5", endColorstr="#B5C6E0", GradientType=1 );
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.641);
     border-top: 0.7px solid black;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0; 
+    z-index: 0;
+
+}
+
+.main-content {
+    flex: 1;
+}
+
+.footer {
+    margin-top: auto; 
 }
 
 .footerBlur {
