--- a/views/layout/adminHeader.ejs
+++ b/views/layout/adminHeader.ejs
@@ -1,72 +1,44 @@
 <%- include('./headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/header.css">
-<style>
-
-  .loading-screen {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #ffffff;
-      z-index: 9999999999999999;
-  }
-  
-  .loader {
-    border: 3px solid #ff0000;
-    box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.185);
-    border-radius: 20%;
-    width: 50px;
-    height: 50px;
-    animation: spin 1s linear infinite;
-}
-  
-  @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-  }
-  
-  </style>
 </head>
 <body>
   <div class="loading-screen">
-    <div class="loader"></div>
+    <span class="loader"></span>
 </div>
 <div class="header ">
     <div class="header2">
         <div class="topHeader">
-            <a href="/admin/logout" title="Logout"><div class="left"><i class="bi text-danger bi-box-arrow-left ms-5 me-2"></i></div></a>
-            <div class="center text-center" style="margin-left: -10px;">
-                RARE KICK'S
+            <a href="/admin/logout" class="Thenga" title="Logout"><div class="left" ><i class="bi text-danger bi-box-arrow-left ms-5 me-2"></i></div></a>
+            <div class="center text-center RAREADMIN">
+              <a href="/admin/home/">RARE KICK'S</a>
             </div>
             <div class="right">
-                <a href="" onclick="handleButtonClick()" id="button"><i class="bi bi-arrow-clockwise me-5 text-dark"></i></a>
+                <a href="" class="Manga" onclick="handleButtonClick()" id="button"><i class="bi bi-arrow-clockwise me-5 text-dark"></i></a>
             </div>
         </div>
-        
-
-
-
         <div class="bottomHeader container mb-3 ">
           
-          <a class="" href="/admin/home/"><h3 class="text-danger"><u>Home</u></h3></a>
           <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
             ADMIN <i class="bi bi-list"></i>
           </button>
               
               <div class="offcanvas offcanvas-start" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel" style="overflow: visible;">
                 <div class="offcanvas-header">
+                  <i class="bi bi-person-circle" style="font-size: 60px;"></i>
                   <h5 class="offcanvas-title" id="staticBackdropLabel">Hello Admin!</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close" style="font-size: 30px; margin: 10px;"></button>
+                  <button type="button" class="btn-close" id="closeButton" data-bs-dismiss="offcanvas" aria-label="Close" style="font-size: 30px; margin: 10px;"></button>
                 </div>
                 <div class="offcanvas-body">
+                  <div class="d-flex" style="flex-direction: column; justify-content: center; row-gap: 10px;">
                   <div>
+                    <a type="button" href="/admin/home" class="btn btn-dark d-flex justify-content-center" style=" text-decoration: none;">PRODUCT MANAGEMENT</a>
+                  </div>
+                  <div>
+                    <a type="button" href="/admin/viewUsers" class="btn btn-dark d-flex justify-content-center" style=" text-decoration: none;">USER MANAGEMENT</a>
+                  </div>
                     <div class="btn-group dropdown">
                 <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    PRODUCTS
+                    BRANDS
                 </button>
                 <ul class="dropdown-menu bg-dark text-center p-4">
                   <li class=" pb-4 ps-3 pe-3"><a class="" href="/admin/brandBased/">All Brands</a></li>
@@ -82,6 +54,7 @@
                 </div>
               </div>
 
+          <a class="" href="/admin/home/"><h3 class="text-danger"><u>Home</u></h3></a>
             
                </div>
     </div>
